# hms_qr

./: .gitignore  README.md  conftest.py  create_structure.sh  pyproject.toml  pytest.ini  requirements.txt
reports/: report.html
src/data/: sim1_stores.csv  sim2_stores.csv  stores.csv
src/locators/: sim1_locators.py  sim2_locators.py  store_locators.py
src/pages/: base_page.py
src/pages/sim1/: cart_page.py  menu_page.py
src/pages/sim2/: menu_page.py
src/pages/store/: cart_page.py  menu_page.py  payment_page.py
src/utils/: config_reader.py  constants.py  credit_card.py  error_handler.py  logger.py  navigation.py
tests/: test_checkout.py  test_price_check.py
