[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --capture=no"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poetry]
name = "menu-testing-framework"
version = "0.1.0"
description = "Automated testing framework for menu website"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
pytest = "^7.0.0"
pytest-html = "^3.0.0"
pytest-xdist = "^2.0.0" 